--- a/.editorconfig
+++ b/.editorconfig
@@ -8,8 +8,7 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{html,xml,js,mustache}]
-indent_style = tab
+[*.{html,js}]
 indent_size = 4
 
 [*.{md,markdown}]
