--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "kh-demo-mobile",
+  "name": "mooas",
   "version": "1.3.0",
   "description": "A online account opening system app for investors, made with Framework7.",
   "author": {
